--- a/index.styl
+++ b/index.styl
@@ -5,10 +5,10 @@
 .vclTabContent
   padding: 0.8em
 
-.vclTabContent p:first-child
+.vclTabContent p:first-of-type
   margin-top: 0
 
-.vclTabContent p:last-child
+.vclTabContent p:last-of-type
   margin-bottom: 0
 
 .vclTabs
