--- a/index.styl
+++ b/index.styl
@@ -48,6 +48,7 @@
   border-radius: 0.35em 0.35em 0 0
   font-weight: normal
   min-width: 4em
+  text-align: center
 
 .vclTabs > ul li > div
   padding-left: 0
@@ -78,8 +79,8 @@
 
 /* Button in tab */
 
-.vclTabs > ul li > a.vclButtonStd,
-.vclTabs > ul li > a.vclButtonStd:hover
+.vclTabs > ul li > .vclButtonStd,
+.vclTabs > ul li > .vclButtonStd:hover
   min-width: 0
   position: absolute
   top: 0
@@ -92,14 +93,14 @@
   background: none
   height: 100%
 
-.vclTabs > ul li.vclSelected > a.vclButtonStd,
-.vclTabs > ul li.vclSelected > a.vclButtonStd:hover
+.vclTabs > ul li.vclSelected > .vclButtonStd,
+.vclTabs > ul li.vclSelected > .vclButtonStd:hover
   border: 0
 
 .vclTabs > ul li > a.vclButtonStd i
   line-height: 2.4em
 
-.vclTabs > ul li.vclSelected > a.vclButtonStd:hover
+.vclTabs > ul li.vclSelected > .vclButtonStd:hover
   background: none
   cursor: pointer
 
@@ -121,6 +122,7 @@
 .vclTabbable.vclTabsLeft a,
 .vclTabbable.vclTabsLeft a:hover
   border-radius: 0.35em 0 0 0.35em
+  text-align: left
 
 .vclTabbable.vclTabsLeft .vclTabBorder ul,
 .vclTabbable.vclTabsLeft .vclTabStyleUni ul
@@ -161,6 +163,7 @@
 .vclTabbable.vclTabsRight a,
 .vclTabbable.vclTabsRight a:hover
   border-radius: 0 0.35em 0.35em 0
+  text-align: left
 
 .vclTabbable.vclTabsRight .vclTabBorder ul,
 .vclTabbable.vclTabsRight .vclTabStyleUni ul
