Rename vclButtonStd -> vclButton

--- a/index.styl
+++ b/index.styl
@@ -159,15 +159,15 @@
 .vclTabs
   ul
     li
-      .vclButtonStd
+      .vclButton
         background-color: transparent
         color: var(--tab-nav-button-label-color)
         &:hover
           background-color: transparent
           color: var(--tab-nav-button-label-hover-color)
     .vclSelected
-      .vclButtonStd,
-      .vclButtonStd:hover
+      .vclButton,
+      .vclButton:hover
         color: var(--tab-nav-button-selected-label-color)
   &.vclTabStyleUni
     ul
