Ensure no text-decoration

--- a/index.styl
+++ b/index.styl
@@ -26,6 +26,9 @@
     > .vclTabLabel
       border: 0
       margin-right: 0.5em
+      text-decoration: none
+    > .vclTabLabel:hover
+      text-decoration: none
     > .vclTabLabel:last-child
       margin-right: 0
 
