--- a/index.styl
+++ b/index.styl
@@ -104,6 +104,7 @@
 .vclTabs.vclTabStyleUni .vclTab,
 .vclTabs.vclTabStyleUni .vclTab:hover
   border: 0
+  border-bottom: 1px solid var(--tab-nav-border-color)
   margin-bottom: -1px
 
 .vclTabs.vclTabStyleUni .vclTab.vclSelected
@@ -195,7 +196,9 @@
 
 .vclTabs
   &.vclTabStyleUni
+    border-left: 1px solid var(--tab-nav-border-color)
     border-bottom: 1px solid var(--tab-nav-border-color)
+    border-right: 1px solid var(--tab-nav-border-color)
     .vclTab
       padding-top: 0
       background-color: var(--tab-nav-tab-bg-color--uni)
@@ -216,6 +219,7 @@
       border-bottom: 0
       .vclTab,
       .vclTab:hover
+        border: 0
         margin: 0
         &.vclSelected
           border: 0
