--- a/index.styl
+++ b/index.styl
@@ -106,6 +106,7 @@
       border-bottom: 3px solid var(--tab-nav-tab-border-selected-color)
     &.vclDisabled,
     &.vclDisabled:hover
+      color: var(--tab-nav-tab-disabled-color)
       background-color: var(--tab-nav-tab-bg-disabled-color)
 
 /* Uni variant */
@@ -223,6 +224,7 @@
         background-color: var(--tab-nav-tab-bg-selected-color--uni)
       &.vclDisabled,
       &.vclDisabled:hover
+        color: var(--tab-nav-tab-disabled-color--uni)
         background-color: var(--tab-nav-tab-bg-disabled-color--uni)
 
 .vclTabbable
