Better alignment of button in tab

--- a/index.styl
+++ b/index.styl
@@ -90,6 +90,7 @@
       outline: none
       background-color: var(--tab-nav-tab-bg-hover-color)
     .vclButton
+      height: auto
       color: var(--tab-nav-tab-button-label-color)
       &:hover
         color: var(--tab-nav-tab-button-label-hover-color)
