--- a/index.styl
+++ b/index.styl
@@ -45,6 +45,7 @@
   float: left
   border: 0
   white-space: nowrap
+  user-select: none
   cursor: pointer
   position: relative
   margin-right: 0.5em
