Add --tab-nav-tab-hover-color--uni var

--- a/index.styl
+++ b/index.styl
@@ -218,6 +218,7 @@
       &:hover,
       &:focus
         background-color: var(--tab-nav-tab-bg-hover-color)
+        color: var(--tab-nav-tab-hover-color--uni)
       &.vclSelected
         background-clip: border-box
         color: var(--tab-nav-tab-color-selected--uni)
