--- a/index.styl
+++ b/index.styl
@@ -1,6 +1,5 @@
 .vclTabbable
   margin-bottom: var(--block-elem-vertical-gap)
-  clear: fix
   &.vclNoBorder
     & .vclTabContent
       border-bottom: 0
@@ -17,9 +16,10 @@
   padding: 0.8em
 
 .vclTabs
+  display: flex
+  flex-direction: row
   box-sizing: border-box
   list-style: none
-  list-style-type: none
   padding: 0
   margin: 0
   clear: fix
@@ -42,14 +42,12 @@
       margin-right: 0
 
 .vclTabs .vclTab
-  float: left
-  border: 0
+  flex-shrink: 0
   white-space: nowrap
   user-select: none
   cursor: pointer
   position: relative
   margin-right: 0.5em
-  min-width: 6em
   display: flex
   flex-flow: row
   align-items: center
@@ -126,7 +124,6 @@
 
 .vclTabbable.vclTabsLeft .vclTab,
 .vclTabbable.vclTabsLeft .vclTab:hover
-  float: none
   margin: 0 0 0 0
   border-radius: 0 0 0 0
   border-bottom: 0
@@ -138,7 +135,12 @@
 
 .vclTabbable.vclTabsLeft .vclTabs.vclTabStyleUni
   border: 0
-
+  display: flex
+  flex-direction: column
+.vclTabbable.vclTabsLeft .vclTabs
+  display: flex
+  flex-direction: column
+  flex: 1 0 80px
 .vclTabbable.vclTabsLeft .vclTabs.vclTabStyleUni .vclTab
   border: 0
   margin-bottom: 0
@@ -152,13 +154,14 @@
 .vclTabbable.vclTabsLeft .vclTabs.vclTabStyleUni .vclTab.vclSelected
   border-right: 0
 
-.vclTabbable.vclTabsLeft .vclTabs
-  float: left
+.vclTabbable.vclTabsLeft
+  display: flex
+  flex-direction: row
+
 
 .vclTabbable.vclTabsLeft .vclTabContent
-  float: left
+
   display: block
-  border-bottom: 0
   border: 0
 
 .vclTabbable.vclTabsLeft .vclTabs.vclTabStyleUni
@@ -166,9 +169,12 @@
 
 /* Tabs right */
 
+.vclTabbable.vclTabsRight
+  display: flex
+  flex-direction: row
+
 .vclTabbable.vclTabsRight .vclTab,
 .vclTabbable.vclTabsRight .vclTab:hover
-  float: none
   margin: 0 0 0 0
   border-radius: 0 0 0 0
   border-bottom: 0
@@ -180,6 +186,12 @@
 
 .vclTabbable.vclTabsRight .vclTabs.vclTabStyleUni
   border: 0
+  order: 2
+
+.vclTabbable.vclTabsRight .vclTabs
+  display: flex
+  flex-direction: column
+  order: 2
 
 .vclTabbable.vclTabsRight .vclTabs.vclTabStyleUni .vclTab
   border: 0
@@ -194,13 +206,11 @@
 .vclTabbable.vclTabsRight .vclTabs.vclTabStyleUni .vclTab.vclSelected
   border-right: 0
 
-.vclTabbable.vclTabsRight .vclTabs
-  float: right
+/*.vclTabbable.vclTabsRight .vclTabs
+  float: right*/
 
 .vclTabbable.vclTabsRight .vclTabContent
-  float: right
   display: block
-  border-bottom: 0
   border: 0
 
 .vclTabbable.vclTabsRight .vclTabs.vclTabStyleUni
